--- a/trainingDiaryFrontend/trainingDiaryFrontend/trainingDiaryFrontend.csproj
+++ b/trainingDiaryFrontend/trainingDiaryFrontend/trainingDiaryFrontend.csproj
@@ -23,6 +23,18 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ClientApp\src\app\models\person.ts" />
+    <None Remove="ClientApp\src\app\person\person.service.ts" />
+    <None Remove="ClientApp\src\app\profile\profile.component.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\models\person.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\person\person.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\profile\profile.component.ts" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
